@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2009-2019 Laboratoire de Recherche et Développement de
+# Copyright (C) 2009-2020 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 # Copyright (C) 2003, 2004 Laboratoire d'Informatique de Paris 6 (LIP6),
 # département Systèmes Répartis Coopératifs (SRC), Université Pierre
@@ -431,3 +431,8 @@ cat >expected <<EOF
 8,(Fin(1) | Inf(0)) & (Fin(2) | Inf(1))
 8,(Fin(1) | Inf(0)) & (Fin(2) | Inf(1)) & (Fin(0) | Inf(2))
 EOF
+
+# This formula used to produce translation with false label.
+ltl2tgba -D -G 'F(G(a | !a) & ((b <-> c) W d))' | grep '\[f\]' && exit 1
+
+:
